# ffmpeg-crop-GUI

./: .gitignore  Makefile  README.md  ffmpeg_crop_gui.spec  filters.py  main.py  pyproject.toml  requirements.txt
src/: common.py  gui_vars.py  main.py  media_info.py
src/core/: common.py  filters.py  fontselector.py  gui_vars.py  media_info.py
src/tabs/: croptrim.py  inout.py  videofilter.py
